--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+  <div class="home">
    <div class="full-hero hero-home">
     <div class="hero-content">
       
@@ -53,6 +54,15 @@ layout: default
 </div>
 
 <div class="home-section">
+  <h4>Most recent post</h4>
+  {% for post in site.posts limit:1 %}
+    {% include post-excerpt.html %}
+  {% end for %}
+
+
+
+
+<div class="home-section">
   <h2>THE FOUNDERS</h2>
   <p>
     Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
@@ -86,6 +96,7 @@ layout: default
         </p>
       </div>
     </div>
+  </div>
     <div class="bio-box">
       <img src="http://placekitten.com/g/400/400">
       <h3>Lee Donahoe</h3>
