--- a/index.html
+++ b/index.html
@@ -6,26 +6,26 @@ layout: default
   <div class="full-hero hero-home">
   <div class="hero-content">
     <h1>CODE DANGEROUSLY</h1>
-    <ul class="social-list">
-      <li>
-        <a href="https://facebook.com/learnenough" class="social-link">
-          <i class="fa fa-facebook"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://twitter.com/learnenough" class="social-link">
-          <i class="fa fa-twitter"></i>
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/learnenough" class="social-link">
-          <i class="fa fa-github"></i>
-        </a>
-      </li>
-    </ul>
+     <ul class="social-list">
+        <li>
+          <a href="https://facebook.com/learnenough" class="social-link">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/learnenough" class="social-link">
+            <i class="fab fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/learnenough" class="social-link">
+            <i class="fab fa-github"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-
+  
    <div class="home-callout">
   <h1 class="callout-title">The Learn Enough Story</h1>
   <div class="callout-copy">
