--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
       </ul>
     </div>
   </div>
-  
+
    <div class="home-callout">
   <h1 class="callout-title">The Learn Enough Story</h1>
   <div class="callout-copy">
@@ -95,7 +95,7 @@ layout: default
       <img src="http://placekitten.com/g/400/400">
       <h3>Michael Hartl</h3>
       <a href="http://twitter.com/mhartl" class="social-link">
-        Tw
+        <i class="fab fa-twitter"></i>
       </a>
       <div class="bio-copy">
         <p>
@@ -120,7 +120,7 @@ layout: default
       <img src="http://placekitten.com/g/400/400">
       <h3>Lee Donahoe</h3>
       <a href="https://twitter.com/leedonahoe" class="social-link">
-        Tw
+        <i class="fab fa-twitter"></i>
       </a>
       <div class="bio-copy">
         <p>
@@ -135,7 +135,7 @@ layout: default
       <img src="http://placekitten.com/g/400/400">
       <h3>Nick Merwin</h3>
       <a href="https://twitter.com/nickmerwin" class="social-link">
-        Tw
+       <i class="fab fa-twitter"></i>
       </a>
       <div class="bio-copy">
         <p>
